# multi_threaded-HTTP-server

./: CMakeLists.txt  LOAD_GENERATOR_ARCHITECTURE.md  Makefile  PROJECT_STRUCTURE.md  README.md  main.cpp  presentation.tex  report.aux  report.fdb_latexmk  report.fls  report.out  report.tex  report.toc  run_server.sh  setup_mysql.sh
cache/: cache.h
db/: db.h
load_generator/: CMakeLists.txt  DEMO_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  README_LOAD_TESTING.md  REPORT_TEMPLATE.md  build.sh  compare_workloads.py  load-generator  load_generator.cpp  monitor_resources.sh  parse_results.py  pin_server_and_mysql.sh  plot_results_new.py  plot_results_old.py  run_all_experiments.sh  run_experiments.sh
load_generator/results_compute_hash_20251124_051735/: summary.csv
load_generator/results_compute_hash_20251124_075531/: resources_10threads.csv  resources_1threads.csv  resources_20threads.csv  resources_40threads.csv  resources_5threads.csv
load_generator/results_compute_mixed_20251124_053829/: summary.csv
load_generator/results_compute_prime_20251124_074855/: resources_10threads.csv  resources_1threads.csv  resources_40threads.csv  resources_5threads.csv
load_generator/results_get_all_20251124_060751/: summary.csv
load_generator/results_get_all_20251124_071123/: resources_10threads.csv  resources_1threads.csv  resources_20threads.csv  resources_5threads.csv  summary.txt
load_generator/results_get_popular_20251124_054619/: summary.csv
load_generator/results_get_popular_20251124_073547/: resources_10threads.csv  resources_20threads.csv
(+30 files in other folders)
